--- a/src/app/game.component/game.component.css
+++ b/src/app/game.component/game.component.css
@@ -41,8 +41,9 @@
     transform: rotate(0deg) scale(-1, 1);
 }
 
+.hand-image.mirror.scissors,
 .hand-image.mirror.rock {
-    transform: rotate(0deg) scale(1, 1);
+    transform: rotate(0deg);
 }
 
 .hand-image.mirror {
@@ -109,4 +110,13 @@ button {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+}
+
+.stats {
+    margin-top: 30px;
+    text-align: center;
+    line-height: 30px;
+}
+.stats .bold {
+    font-weight: bold;
 }
