--- a/src/app/game.component/game.component.css
+++ b/src/app/game.component/game.component.css
@@ -5,13 +5,13 @@
 }
 
 .hand-image {
-    background-image: url('/assets/ROCK-PAPER-SCISSORS.png');
-    width: 125px;
-    height: 124px;
+    background-image: url(/assets/ROCK-PAPER-SCISSORS.png);
+    width: 122px;
+    height: 122px;
     border-radius: 150px;
     transform: rotate(-210deg);
     border: 4px solid white;
-    background-position: -24px -22px;
+    background-position: -25px -24px;
 }
 
 .hand-image.selected {
@@ -29,12 +29,12 @@
 }
 
 .hand-image.paper {
-    background-position: -153px -60px;
+    background-position: -153px -61px;
 }
 
 .hand-image.scissors {
     transform: scale(-1, 1);
-    background-position: -57px -146px;
+    background-position: -58px -148px;
 }
 
 .hand-image.mirror.paper {
@@ -89,6 +89,7 @@
 
 .hands-flex-row.scaled {
     transform: scale(0.5);
+    margin: -20px;
 }
 
 .hands-flex-row.scaled .hand-image:hover:not(.selected) {
@@ -98,7 +99,8 @@
 }
 
 h1 {
-    min-height: 90px;
+    min-height: 60px;
+    margin-bottom: 0;
 }
 
 button {
@@ -113,7 +115,7 @@ button {
 }
 
 .stats {
-    margin-top: 30px;
+    margin-top: 15px;
     text-align: center;
     line-height: 30px;
 }
