feature(game.component) play button will be just invisible to keep height

--- a/src/app/game.component/game.component.css
+++ b/src/app/game.component/game.component.css
@@ -123,6 +123,10 @@ button {
     font-weight: bold;
 }
 
+.hidden {
+    visibility: hidden;
+}
+
 .history-data {
     position: absolute;
     left: 0;
